apps/circuit-breaker-service/gateway-route/overlays/dev/cb-gateway-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cb-gateway
  namespace: platform-gateway
spec:
  host: cb-dev.apps.cluster-pvsbw.dyn.redhatworkshops.io
