apps/circuit-breaker-service/gateway-route/overlays/dev/route-circuit-breaker-gateway-passthrough.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cb-gateway
  namespace: platform-gateway
spec:
  # Sustituir por el dominio del cluster de DESARROLLO: apps.<cluster-dev>.<dominio-base>
  host: cb-dev.apps.cluster-dev.ejemplo.com
